--- a/config/dev.env.sample
+++ b/config/dev.env.sample
@@ -1,4 +1,4 @@
 PORT=your-port
 SENDGRID_API_KEY=your-sendgrid-apiKey
-MONGODB_URL=your-mongodb-uri
+MONGODB_URL=mongodb-url
 JWT_SECRET=yourjwtsecret
